--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -213,4 +213,6 @@ body{
 
 @import "contact/_contactIntro.scss";
 @import "contact/_formSection.scss";
+
+@import "services/_servicesList.scss";
 //-------------------------------IMPORTS---------------------------------
