--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1313,12 +1313,11 @@ footer .contact .fa-instagram {
     text-align: start;
   }
 }
-.servicesListContainer .serviceSection .serviceSectionTitle {
-  width: 100%;
+.servicesListContainer .serviceSection {
+  padding: 50px 0px;
 }
-.servicesListContainer .serviceSection .serviceSectionTitle h3 {
-  text-align: center;
-  margin-bottom: 20px;
+.servicesListContainer .serviceSection .titleSection p, .servicesListContainer .serviceSection .secondaryTitleSection p {
+  font-size: 30px;
 }
 .servicesListContainer .serviceSection .serviceSectionContent {
   display: flex;
@@ -1331,8 +1330,8 @@ footer .contact .fa-instagram {
   width: -moz-fit-content;
   width: fit-content;
   max-width: 500px;
-  transform: translateX(30px);
-  margin: 0px 50px;
+  transform: translateX(0px);
+  margin: 0px 0px;
 }
 .servicesListContainer .serviceSection .serviceSectionContent ul li {
   margin: 15px 0px;
