--- a/styles/services/_servicesList.scss
+++ b/styles/services/_servicesList.scss
@@ -1,9 +1,31 @@
 .servicesListContainer{
+    margin-top: 25px;
     .serviceSection{
-        padding: 50px 0px;
-        .titleSection{
-            p{
-                font-size: 30px;
+        margin-bottom: 50px;
+        .serviceTitle{
+            width: 100%;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            margin-bottom: 10px;
+            span{
+                color: $secondaryColor;
+                background-color: $primaryColor;
+                width: 50px;
+                height: 50px;
+                display: flex;
+                align-items: center;
+                justify-content: center;
+                border-radius: 8px;
+                p{
+                    font-size: 35px;
+                    font-family: "semibold";
+                }
+            }
+            h3{
+                font-family: "semibold";
+                font-size: 25px;
+                margin-top: 5px;
             }
         }
         .serviceSectionContent{
