--- a/styles/services/_servicesList.scss
+++ b/styles/services/_servicesList.scss
@@ -26,6 +26,7 @@
                 font-family: "semibold";
                 font-size: 25px;
                 margin-top: 5px;
+                text-align: center;
             }
         }
         .serviceSectionContent{
