--- a/styles/_footer.scss
+++ b/styles/_footer.scss
@@ -155,7 +155,7 @@ footer{
         }
         a{
             text-decoration: none;
-            font-family: "bold";
+            font-family: "semibold";
          
             color: $secondaryColor;
         }
