--- a/styles/index/_testimonialSection.scss
+++ b/styles/index/_testimonialSection.scss
@@ -7,16 +7,36 @@
     flex-wrap: wrap;
     justify-content: center;
     padding-bottom: 50px;
+
+    .titleSection{
+        margin-top: 30px;
+    }
+
+    .testimonialContainer{
+       display: flex;
+       flex-wrap: wrap; 
+       justify-content: center;
+      align-items: center;
+      min-height: 467px;
+       img{
+        height: 60px;
+        cursor: pointer;
+        display: none;
+       }
+       .leftArrow{
+        transform: rotate(180deg);
+       }
+    }
     .testimonial{
         position:relative;
-        max-width: 350px;
+        max-width: 1000px;
         height: fit-content;
         background-color: $primaryDark;
         box-shadow: 0px 0px 13px 0px #00000067;
         padding: 40px 40px;
-        margin: 10px 0px;
+        margin: 10px 10px;
         text-align: center;
-     
+        transition: 0.5s;
 
         .testimonialText{
             border: 1px solid $secondaryColor;
@@ -27,13 +47,15 @@
         }
         p{
             color: $white;
-            margin-bottom: 10px;
+            margin-bottom: 15px;
         }
         b{
             font-family: "semibold";
             color: $white;
         }
-
+        .test2{
+            display: block !important;
+        }
 
 
         .topLeftQuote{
@@ -87,11 +109,14 @@
         }
         
     }
-
+  
 }
 
-@media(min-width:500px){
+@media(min-width:550px){
     .testimonialSection{
+        .titleSection{
+            margin-top: unset;
+        }
         .testimonial{
             margin: 10px 30px;
 
@@ -102,4 +127,45 @@
     }
 
 
+}
+
+
+
+@media(min-width:1300px){
+    .testimonialSection{
+        .titleSection{
+            margin-top: unset;
+        }
+        .testimonialContainer{
+            
+            img{
+                display: block;
+            }
+        }
+        .test2{
+            display: none;
+
+
+        }
+
+
+    }
+
+
+}
+
+
+@media(min-width:1400px){
+    .testimonialSection{
+    
+        .testimonialContainer{
+            
+            img{
+                margin: 0px 30px;
+            }
+        }
+       
+
+
+    }
 }
