--- a/styles/index/_aboutSection.scss
+++ b/styles/index/_aboutSection.scss
@@ -4,10 +4,10 @@
     flex-direction: column;
     align-items: center;
     background-image: url("../../images/aboutBackground.png");
-
+    padding-top: 20px;
     background-size: cover;
-    
-
+    position: relative;
+   
     .aboutSectionContent{
         p{
             text-align: center;
@@ -24,6 +24,20 @@
     }
 
 
+}
+
+@media(min-width:550px){
+    .aboutSection{
+        padding-top: 80px;
+       
+    }
+}
+
+@media(min-width:660px){
+    .aboutSection{
+       
+       
+    }
 }
 
 @media(min-width:1000px){
