--- a/styles/index/_testimonialSection.scss
+++ b/styles/index/_testimonialSection.scss
@@ -1,15 +1,16 @@
 .testimonialSection{
-   
+    position: relative;
     margin-top: 100px;
     background-color: $primaryDark;
     width: 100%;
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
-    padding-bottom: 50px;
-
-    .titleSection{
-        margin-top: 30px;
+    padding-bottom: 30px;
+    padding-top: 20px;
+  
+    .secondaryTitleSection{
+      
     }
 
     .testimonialContainer{
@@ -17,7 +18,7 @@
        flex-wrap: wrap; 
        justify-content: center;
       align-items: center;
-      min-height: 467px;
+      min-height: 491px;
        img{
         height: 60px;
         cursor: pointer;
@@ -34,7 +35,6 @@
         background-color: $primaryDark;
         box-shadow: 0px 0px 13px 0px #00000067;
         padding: 40px 40px;
-        margin: 10px 10px;
         text-align: center;
         transition: 0.5s;
 
@@ -116,6 +116,8 @@
     .testimonialSection{
         .titleSection{
             margin-top: unset;
+            padding-top: 60px;
+            margin-top: 10px;
         }
         .testimonial{
             margin: 10px 30px;
@@ -137,7 +139,16 @@
             margin-top: unset;
         }
         .testimonialContainer{
-            
+            .testimonial{
+                .testimonialText{
+                    p{
+                        font-size: 18px;
+                    }
+                    b{
+                        font-size: 18px;
+                    }
+                }
+            }
             img{
                 display: block;
             }
