--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -89,7 +89,7 @@ body{
   align-items: center;
   width: 100%;
   text-align: center;
-  margin-top: 50px;
+  margin-top: 30px;
   margin-bottom: 30px;
 
     b{
@@ -149,10 +149,12 @@ body{
   display: none !important;
   background-color: $white;
   border-radius: 10px;
-  transform: translateY(-53px);
+  //transform: translateY(-53px);
   display: flex;
+  position: absolute;
   flex-direction: column;
   box-shadow: -0px 0px 30px -10px rgba(0, 0, 0, 0.856);
+  top: -53px;
   .topSection{
     display: flex;
     align-items: center;
