--- a/styles/styles.css
+++ b/styles/styles.css
@@ -816,6 +816,7 @@ footer .contact .fa-instagram {
   padding: 40px 40px;
   text-align: center;
   transition: 0.5s;
+  margin: 10px 0px;
 }
 .testimonialSection .testimonial .testimonialText {
   border: 1px solid #F6DCBB;
