--- a/styles/index/_aboutSection.scss
+++ b/styles/index/_aboutSection.scss
@@ -7,7 +7,7 @@
     padding-top: 20px;
     background-size: cover;
     position: relative;
-   
+    margin-top: 100px;
     .aboutSectionContent{
         p{
             text-align: center;
