--- a/styles/_footer.scss
+++ b/styles/_footer.scss
@@ -15,6 +15,7 @@ footer{
             letter-spacing: 1px;
             font-size: 18px;
             margin-right: 5px;
+           
         }
        
         ul{
@@ -49,7 +50,7 @@ footer{
                 color: $accentColor;
                 b{
                     color: $accentColor;
-                    font-family: "bold";
+                    font-family: "semibold";
                     color: $secondaryColor;
                 }
             }
