--- a/styles/styles.css
+++ b/styles/styles.css
@@ -421,7 +421,7 @@ footer .section ul li:first-child {
 }
 footer .section ul li:first-child b {
   color: #692D50;
-  font-family: "bold";
+  font-family: "semibold";
   color: #F6DCBB;
 }
 footer .logoAndDescription {
