--- a/styles/_newPageLanding.scss
+++ b/styles/_newPageLanding.scss
@@ -1,7 +1,7 @@
 @import "index/_landing.scss";
 .newPageLanding{
     position: relative;
-    background-image: url("../../images/heroImage.png");
+    background-image: url("../../images/heroImage.webp");
     background-attachment: fixed;
     background-size: cover;
     width: 100%;
