--- a/styles/contact/_formSection.scss
+++ b/styles/contact/_formSection.scss
@@ -3,7 +3,7 @@
     width: 100%;
     margin-top: 30px;
     padding-bottom: 30px;
-    background-image: url("../../images/aboutBackground.png");
+    background-image: url("../../images/aboutBackground.webp");
     background-attachment: fixed;
     .secondaryTitleSection{
         margin-bottom: 10px;
