--- a/styles/index/_aboutSection.scss
+++ b/styles/index/_aboutSection.scss
@@ -3,7 +3,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    background-image: url("../../images/aboutBackground.png");
+    background-image: url("../../images/aboutBackground.webp");
     padding-top: 20px;
     background-size: cover;
     position: relative;
