--- a/styles/index/_landing.scss
+++ b/styles/index/_landing.scss
@@ -1,7 +1,7 @@
 .landing{
     position: relative;
     z-index: 1;
-    background-image: url("../../images/heroImage.png");
+    background-image: url("../../images/heroImage.webp");
     height: fit-content;
     background-size: cover;
     display: flex;
