--- a/styles/index/_whyUsSection.scss
+++ b/styles/index/_whyUsSection.scss
@@ -25,13 +25,13 @@
             }
         
             .image1{
-                background-image: url("../../images/hourGlass.jpg");
+                background-image: url("../../images/hourGlass.webp");
             }
             .image2{
-                background-image: url("../../images/moneyCAD.jpg");
+                background-image: url("../../images/moneyCAD.webp");
             }
             .image3{
-                background-image: url("../../images/hourGlass.jpg");
+                background-image: url("../../images/hourGlass.webp");
             }
         
             
