--- a/styles/_navigation.scss
+++ b/styles/_navigation.scss
@@ -10,7 +10,7 @@
             transform: translateY(10px);
             padding-left: 30px;
             width: 106px;
-            height: auto;
+            height: 136px;
    
         }
         a, p{
@@ -59,7 +59,7 @@
             background-color: $primaryColor;
             img{
                 height: 200px;
-                width: auto;
+                width: 200px;
                 padding-left: 0px;
              
             }
@@ -169,7 +169,7 @@
         background-color: transparent;
         img{
             width: 150px;
-
+            height: 180px;
         }
         a, p{
             button{
