--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -12,7 +12,7 @@ $accentColorDark: #301E2E;
 $accentColorLight: #692D50;
 
 
-$pink: #9e6383;
+$pink: #925b84;
 $white:  #FAFAFA;
 $gray: #626262;
 $black: #111111;
