--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1199,7 +1199,7 @@ footer .contact .fa-instagram {
   max-width: 500px;
 }
 .whySection .whySectionContent .whyReason:nth-child(2) .whyReasonText {
-  background-color: #9e6383;
+  background-color: #925b84;
 }
 .whySection .whySectionContent .whyReason:nth-child(3) .whyReasonText {
   background-color: #301E2E;
