--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -38,7 +38,11 @@ $black: #111111;
   src: url(../fonts/Poppins/Poppins-SemiBold.ttf);
   font-display: swap;
 }
-
+@font-face {
+  font-family: 'FontAwesome';
+  src: url('path/to/fontawesome.woff2') format('woff2');
+  font-display: swap; /* or another appropriate value */
+}
 //-------------------------------FONTS---------------------------------
 
 //-------------------------------MULTI PURPOSE CSS---------------------------------
