--- a/styles/index/_landing.scss
+++ b/styles/index/_landing.scss
@@ -124,7 +124,7 @@
             flex-wrap: wrap;
             margin-bottom: 30px;
             button{
-                font-size: 20px;
+                font-size: 16px;
                 margin: 10px 10px;
             }
         }
@@ -151,7 +151,13 @@
             .supportingDetails{
                 font-size: 18px;
             }
-
+            .buttons{
+              
+                button{
+                    font-size: 20px;
+                    
+                }
+            }
 
 
         }
