--- a/styles/services/_servicesList.scss
+++ b/styles/services/_servicesList.scss
@@ -60,10 +60,12 @@
                     padding: 0px 10px;
                     display: flex;
                     align-items: center;
-                    .fa{
-                        color: $primaryColor;
-                        font-size: 25px;
-                        margin-right: 15px;
+                    font-size: 18px;
+                    img{
+                        width: 32px;
+                        height: 32px;
+                        margin-right: 10px;
+                        transform: translateY(2px);
                     }
                 }
             }
